apps/media/media-ingest/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-prod-media-ingress
  namespace: media-ingest
spec:
  ingressClassName: nginx
  rules:
  - host: "prowlarr.home.arpa"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prowlarr-prod-media-svc
            port:
              number: 9696
